# apt-cache-test

./: CMakeLists.txt  hello-world.cpp  vcpkg.json
.github/workflows/: build.yml  deps-linux.txt
